@@ -40,6 +40,22 @@ The dbv0.0.39 plugin forked from the dbv0.0.38 plugin.
 </tr>
 </table>
 
+<h4>Add new field<h4>
+<table class="tchange">
+<tr>
+	<td class="tdfield">new path</td>
+	<td class="tdchange">.components.schemas."v0.0.39_partition".properties.default_memory_per_node</td>
+</tr>
+</table>
+
+<h4>Change field type<h4>
+<table class="tchange">
+<tr>
+	<td class="tdfield">path</td>
+	<td class="tdchange">.components.schemas."v0.0.39_partition".properties.default_memory_per_cpu.type</td>
+</tr>
+</table>
+
 <h3>openapi/dbv0.0.37 (src/plugins/openapi/dbv0.0.37/openapi.json)</h3>
 
 <h4>Deprecation notice</h4>
